--- a/_notebooks/lessons/2025-04-21-3.5_Graphs.ipynb
+++ b/_notebooks/lessons/2025-04-21-3.5_Graphs.ipynb
@@ -71,15 +71,6 @@
     "- Each index in the array corresponds to a vertex.\n",
     "- Each element in the list is a neighboring vertex.\n",
     "\n",
-    "## 🧠 Concept Check\n",
-    "\n",
-    "### Cities as Graphs\n",
-    "\n",
-    "- **Nodes (Vertices):** Cities  \n",
-    "- **Edges:** Roads between cities  \n",
-    "- **Weights:** Distance or travel cost  \n",
-    "\n",
-    "\n",
     "----\n",
     "\n",
     "\n",
@@ -124,6 +115,9 @@
     "- B ↔ D (15 mi)  \n",
     "- C ↔ D (30 mi)  \n",
     "- D ↔ E (10 mi)\n",
+    "\n",
+    "<a href=\"{{ site.baseurl }}/images/popcornhackgraphs.PNG\">View Popcorn Hack Graphs</a>\n",
+    "\n",
     "\n",
     "Using this graph, we can:\n",
     "- Evaluate different paths from A to E.\n",
