--- a/_notebooks/lessons/2025-04-21-3.5_Graphs.ipynb
+++ b/_notebooks/lessons/2025-04-21-3.5_Graphs.ipynb
@@ -8,7 +8,17 @@
      "languageId": "raw"
     }
    },
-   "source": []
+   "source": [
+    "---\n",
+    "layout: post\n",
+    "toc: true\n",
+    "categories: [Big Idea3]\n",
+    "title: 3.5 Undecideable Problems, Graphs + Heuristics\n",
+    "description: Big Idea 3.5\n",
+    "type: ccc\n",
+    "comments: true\n",
+    "---"
+   ]
   },
   {
    "cell_type": "markdown",
