update mcq blog

--- a/_notebooks/Foundation/2025-04-21-StudyPlan.ipynb
+++ b/_notebooks/Foundation/2025-04-21-StudyPlan.ipynb
@@ -27,7 +27,54 @@
    "source": [
     "### MCQ Overview\n",
     "<img src=\"{{site.baseurl}}/images/mcqpic.PNG\" title=\"Overview\" alt=\"\">\n",
-    "<img src=\"{{site.baseurl}}/images/mcqskills.PNG\" title=\"Big Ideas\" alt=\"\">"
+    "<img src=\"{{site.baseurl}}/images/mcqskills.PNG\" title=\"Big Ideas\" alt=\"\">\n",
+    "\n",
+    "## AP CSP Exam Overview: Units 3.5, 3.10, and 5.6\n",
+    "\n",
+    "### 3.5 Boolean Expressions\n",
+    "**Overview:**  \n",
+    "Boolean expressions evaluate to either `true` or `false`. They're often used in conditional statements (`if`, `else`) to control program flow.  \n",
+    "**Common Operators:**\n",
+    "- `==`, `!=` (equality/inequality)\n",
+    "- `>`, `<`, `>=`, `<=`\n",
+    "- `and`, `or`, `not` (logical operators)\n",
+    "\n",
+    "**Tips to Improve:**\n",
+    "- Practice translating real-world scenarios into Boolean expressions.\n",
+    "- Memorize truth tables for `and`, `or`, and `not`.\n",
+    "- Simplify compound conditions to avoid confusion.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 3.10 Lists\n",
+    "**Overview:**  \n",
+    "Lists are ordered collections of elements. You can access, modify, and iterate over them using indices and loops.  \n",
+    "**Key Concepts:**\n",
+    "- `list[i]` accesses the element at index `i`.\n",
+    "- `append(item)`, `remove(item)`, `insert(i, item)` for modifying.\n",
+    "- Iterating with `for item in list:` or `for i in range(len(list)):`.\n",
+    "\n",
+    "**Tips to Improve:**\n",
+    "- Know 0-based indexing well.\n",
+    "- Trace list modifications step by step.\n",
+    "- Get comfortable with nested lists and list methods.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 5.6 Safe Computing\n",
+    "**Overview:**  \n",
+    "Safe computing focuses on protecting data and devices from security threats like phishing, malware, and unauthorized access.  \n",
+    "**Key Concepts:**\n",
+    "- Use strong passwords and 2FA.\n",
+    "- Avoid clicking suspicious links.\n",
+    "- Understand ethical data use and digital citizenship.\n",
+    "\n",
+    "**Tips to Improve:**\n",
+    "- Think like a hacker: how would you exploit a system?\n",
+    "- Apply knowledge to real-life situations (e.g., recognizing scams).\n",
+    "- Review case studies and their security flaws.\n",
+    "\n",
+    "---\n"
    ]
   },
   {
