modified:   _notebooks/lessons/2025-04-28-3.6-Base_2_Math_and_Logic_Gates.ipynb

--- a/_notebooks/lessons/2025-04-28-3.6-Base_2_Math_and_Logic_Gates.ipynb
+++ b/_notebooks/lessons/2025-04-28-3.6-Base_2_Math_and_Logic_Gates.ipynb
@@ -90,6 +90,53 @@
   },
   {
    "cell_type": "markdown",
+   "id": "405268dc",
+   "metadata": {},
+   "source": [
+    "\n",
+    "---\n",
+    "\n",
+    "## Popcorn Hack 1: Identifying Binary\n",
+    "\n",
+    "### Example 1\n",
+    "**Number:** `101010`  \n",
+    "- ✅ Only contains 0s and 1s → **This is a valid binary number**\n",
+    "\n",
+    "### Example 2\n",
+    "**Number:** `12301`  \n",
+    "- ❌ Contains digits other than 0 and 1 → **This is NOT a valid binary number**\n",
+    "\n",
+    "### Example 3\n",
+    "**Number:** `11001`  \n",
+    "- ✅ Only contains 0s and 1s → **This is a valid binary number**\n",
+    "\n",
+    "---\n",
+    "\n",
+    "# Popcorn Hack 2: Examples for Adding and Subtracting Binary\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Example 1 (Adding):\n",
+    "**Binary Numbers:** 101 + 110  \n",
+    "✅ Answer: **1011**\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Example 2 (Subtracting):\n",
+    "**Binary Numbers:** 1101 - 1011  \n",
+    "✅ Answer: **010**\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Example 3 (Adding):\n",
+    "**Binary Numbers:** 111 + 1001  \n",
+    "✅ Answer: **1110**\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "06a44231",
    "metadata": {},
    "source": [
