--- a/_notebooks/Foundation/2025-06-09-finalblog.ipynb
+++ b/_notebooks/Foundation/2025-06-09-finalblog.ipynb
@@ -4,7 +4,17 @@
    "cell_type": "markdown",
    "id": "28a10331",
    "metadata": {},
-   "source": []
+   "source": [
+    "---\n",
+    "layout: post\n",
+    "toc: true\n",
+    "categories: [Final]\n",
+    "title: Final Blog\n",
+    "description: Tri 3 Final\n",
+    "type: ccc\n",
+    "comments: true\n",
+    "---"
+   ]
   },
   {
    "cell_type": "markdown",
