--- a/_notebooks/Foundation/2025-06-09-finalblog.ipynb
+++ b/_notebooks/Foundation/2025-06-09-finalblog.ipynb
@@ -32,8 +32,21 @@
     "Throughout the year, I’ve worked on a variety of technical projects — each with its own goals, challenges, and breakthroughs. Here are some highlights:\n",
     "\n",
     "- **Optivize**: I developed a one-page business platform with features like AI chat support, inventory management, product success prediction, and a smart calendar.\n",
+    "\n",
+    "\n",
+    "\n",
     "- **StudyBuddy**: Built a note-taking feature, allowing shared access and real-time editing. This project deepened my understanding of backend communication and user interaction design.\n",
+    "\n",
+    "\n",
+    "\n",
     "- **Cookie Sales Predictor**: I implemented machine learning to forecast cookie sales based on user input — one of my first real-world data applications.\n",
+    "\n",
+    "\n",
+    "<img src=\"{{site.baseurl}}/images/sbn.PNG\" title=\"Image\" alt=\"\">\n",
+    "<img src=\"{{site.baseurl}}/images/optivizei.PNG\" title=\"Image\" alt=\"\">\n",
+    "<img src=\"{{site.baseurl}}/images/optivizep.PNG\" title=\"Image\" alt=\"\">\n",
+    "\n",
+    "---\n",
     "\n",
     "You can explore all my homework blogs and tech write-ups [here](https://martijorbam.github.io/marti_2025/search/).\n",
     "\n",
@@ -58,23 +71,19 @@
     "\n",
     "Additionally, I’ve kept a detailed blog throughout the year to document and reflect on my technical journey. My blog is more than a portfolio — it’s a certification of the hard work and growth I’ve achieved this year.\n",
     "\n",
-    "---\n",
+    "Previous N@tM blog [here](https://martijorbam.github.io/marti_2025/2025/02/27/NightattheMuseum_IPYNB_2_.html).\n",
+    "N@tM post [here](https://www.linkedin.com/feed/update/urn:li:activity:7336525308935737344/?commentUrn=urn%3Ali%3Acomment%3A%28activity%3A7336525308935737344%2C7336797996287782914%29&dashCommentUrn=urn%3Ali%3Afsd_comment%3A%287336797996287782914%2Curn%3Ali%3Aactivity%3A7336525308935737344%29).\n",
     "\n",
-    "## 💡 What Makes My Work Unique?\n",
     "\n",
-    "- **I connect code to real impact.** Whether helping local businesses or building educational tools, I code with purpose.\n",
-    "- **I lead with structure.** As a Scrum Master, I organize teams, manage timelines, and ensure everyone contributes their best.\n",
-    "- **I write clean and thoughtful reflections** to track my journey and help others learn from my experience.\n",
     "\n",
     "---\n",
     "\n",
-    "## ✅ Looking Ahead\n",
+    "<img src=\"{{site.baseurl}}/images/optivizef.PNG\" title=\"Frontend Commits\" alt=\"\">\n",
+    "<img src=\"{{site.baseurl}}/images/optivizeb.PNG\" title=\"Backend Commits\" alt=\"\">\n",
+    "<img src=\"{{site.baseurl}}/images/overallstats.PNG\" title=\"All Commits\" alt=\"\">\n",
     "\n",
-    "The lessons and projects from this year are just the beginning. I’m excited to keep building, learning, and sharing what I create. Whether through future internships, open-source contributions, or launching new ideas, I’m ready to take everything I’ve learned to the next level.\n",
     "\n",
-    "Thanks for following along with my journey.\n",
-    "\n",
-    "— **Martí Jorba**\n"
+    "---"
    ]
   }
  ],
