--- a/_notebooks/Foundation/2025-06-09-finalblog.ipynb
+++ b/_notebooks/Foundation/2025-06-09-finalblog.ipynb
@@ -78,12 +78,17 @@
     "\n",
     "---\n",
     "\n",
+    "\n",
+    "## Commits\n",
     "<img src=\"{{site.baseurl}}/images/optivizef.PNG\" title=\"Frontend Commits\" alt=\"\">\n",
     "<img src=\"{{site.baseurl}}/images/optivizeb.PNG\" title=\"Backend Commits\" alt=\"\">\n",
     "<img src=\"{{site.baseurl}}/images/overallstats.PNG\" title=\"All Commits\" alt=\"\">\n",
     "\n",
     "\n",
-    "---"
+    "---\n",
+    "\n",
+    "<img src=\"{{site.baseurl}}/images/ocs1.PNG\" title=\"OCS\" alt=\"\">\n",
+    "<img src=\"{{site.baseurl}}/images/ocs2.PNG\" title=\"OCS\" alt=\"\">\n"
    ]
   }
  ],
